--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Analytics</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/react-github-contribution-calendar/default.css"
+      type="text/css"
+    />
   </head>
   <body>
     <div id="root"></div>
